# Music-Library

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  script_tests.py
.github/workflows/: bandit.yml  build.yml  makefile.yml  release.yml
Kubernetes/: deployment.yaml  env-configmap.yaml.example  env-mongo-secret.yaml.example  env-music-library-configmap.yaml  kube-start.sh  load-balancer.yaml  metallb-configmap.yaml  mongo-deployment.yaml  mongo-headless-service.yaml  music-library-HPA.yaml  music-library-PDB.yaml  music-library-deployment.yaml  music-library-secrets.yaml.example  music-library-service.yaml  namespace.yaml  network-policy.yaml
src/musiclibrary/: archivio.py  cli_menu.py  gestoreAPI.py  main.py  mongo_client.py  vinile.py
tests/: api_test.py  archivio_test.py  gestoreAPI_test.py  vinile_test.py
