[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Music-Library"
version = "2.2.0"
requires-python = ">=3.13"
description = "A music library application that allows you to search for albums and artists using Discogs API"
readme = {file = "README.md", content-type = "text/markdown"}
license-files = ["LICENSE"]
authors = [{name = "0xSirel"}]
keywords = ["music", "library", "discogs", "vinyl", "cd", "cassette"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "requests>=2.32.5",
    "Flask>=3.1.2",
    "pymongo>=4.15.5"
]
[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "types-requests>=2.32.0",
]

[project.urls]
Repository = "https://github.com/0xSirel/Music-Library"
Issues = "https://github.com/0xSirel/Music-Library/issues"

[project.scripts]
music-library = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
include = ["src/**/*.py","tests/**/*.py"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E2", "E3"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = false

docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
addopts = "--cov=musiclibrary --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["musiclibrary"]
omit = [
    "src/musiclibrary/cli_menu.py",
    "src/musiclibrary/main.py",
    "src/musiclibrary/vinile.py",
    "src/musiclibrary/__init__.py",
    "src/musiclibrary/mongo_client.py"
]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B104"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
